--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -1,6 +1,9 @@
 {
   "name": "weather-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.3.0"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.0",
